Stylized the homepage using basic bootstrap customization

--- a/app/views/application/homepage.html.erb
+++ b/app/views/application/homepage.html.erb
@@ -1,3 +1,10 @@
-Welcome to the MobiDick Library
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1> Welcome to the MobiDick Library </h1>
+<br>
 <br>
 Where all of your mobi dreams can come true
+
